Mobile Fixes and Issue Fixes (#7)
* Fixed Most Mobile Layout Issues

* Fixed Menu Bar on Mobile

* Fixxes And Alteraations

* Updated Readme

* Fixed Link

* Updated Website Post to reflect changes

* Added Resume, removed references to tutorials

* Final Mobile Fixes

* Fixed mobile issues and Sharp image optimization
Fixed a vulknerable package also

* Fixed Spacing and Added download link for Resume

---------

--- a/pages/mobile.css
+++ b/pages/mobile.css
@@ -83,6 +83,10 @@
     .image-div{
         order: 1;
     }
+    .text-about {
+        justify-content: left;
+        text-align: left;
+    }
     
 }
 
@@ -133,5 +137,25 @@
     }
     .image-div{
         order: 1;
+    }
+    .typed-out {
+        font-size: 3em;
+    }
+    .text {
+        font-size: 1.2em;
+    }
+    .image-div {
+        width: 300px;
+        height: 300px;
+    }
+    .section-header {
+        font-size: 3em;
+    }
+    .img-contact {
+        margin-top: 5px;
+    }
+    .text-about {
+        justify-content: left;
+        text-align: left;
     }
 }
